    GUIDisplay:
        The Class exists now.
Entity Interfaces:
    Displayable:

    Editable:
        - Wrote the compareTo method.
        - Wrote registerChild method.
        - Wrote removeChild method.
        - Changed the field parent from private to protected.
        - Added the protected field children.
        - Added a getChildren method.
    Entity:
        - Moved the registerRelation and removeRelation methods to the
          Relatable interface.
        - Added compareTo method.
        - Added getEntityChildren method.
        - Added setParent method.

    RatedRelation:

    Relation:

    -- Created the Relatable interface.
    Relatable:
        - Added

Entity Classes:
    Argument:
        - Wrote an equals method.
        - Removed the registerRelation and removeRelation methods.
        - Added a default constructor.
    Idea:
        - Wrote an equals method.
        - Added a default constructor.

    Library:
        - Wrote the equals method.
        - Added a default constructor.

    Note:
        - Wrote the equals method.
        - Changed getChildren to getEntityChildren.
        - Added a default constructor.
    RefArg:
        - Updated to fit with the new Relation interface.

    Reference:
        - Wrote the equals method.
        - Added code for generating MLA and APA citations.
        - Added a default constructor.
    RefIdea:
        - Updated to fit with the new Relation interface.

    Theme:
        - Wrote the equals method.
        - Added a default constructor.
    Topic:
        - Wrote the equals method.
        - Removed the registerRelation and removeRelation methods.
        - Changed getChildren to getEntityChildren.
        - Changed addTheme to registerChild.
        - Changed deleteTheme to removeChild.

    Other Comments:
        Removed the add method from all entity classes, now they all inherit
        registerChild from Editable. This is also true of the remove methods,