@@ -38,6 +38,7 @@ Entity Interfaces:
         - Changed the field parent from private to protected.
         - Added the protected field children.
         - Added a getChildren method.
+        - Added a sort method to sort children in ascending or descending order.
     Entity:
         - Moved the registerRelation and removeRelation methods to the
           Relatable interface.
@@ -77,6 +78,7 @@ Entity Classes:
         - Wrote the equals method.
         - Added code for generating MLA and APA citations.
         - Added a default constructor.
+        - Added the listOptions method.
     RefIdea:
         - Updated to fit with the new Relation interface.
 
